# academic-notes

./: .buildinfo  .gitignore  README.html  _config.yml  _toc.yml  genindex.html  intro.html  introduction.html  introduction.md  main.py  objects.inv  pyproject.toml  references.bib  requirements.txt  search.html  searchindex.js
_build/.doctrees/: README.doctree  environment.pickle  intro.doctree
_build/.doctrees/stats-500/: introduction.doctree
_build/html/: .buildinfo  README.html  genindex.html  intro.html  search.html  searchindex.js
_build/html/_sources/: README.md
_build/html/stats-500/: introduction.html
_build/jupyter_execute/stats-500/: introduction.ipynb
_sources/: README.md  introduction.md
_sources/stats-500/: introduction.ipynb
_sources/stats-500/chapter01/: chapter01.ipynb
_sources/stats-500/chapter02/: chapter02.ipynb
bibliography/: bibliography.html
stats-500/: introduction.html  introduction.ipynb
stats-500/bibliography/: bibliography.html
stats-500/chapter01/: chapter01.html  chapter01.ipynb
stats-500/chapter02/: chapter02.html
