[project]
name = "academic-notes"
version = "0.1.0"
description = "Notes on statistics across different classes at Penn State"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ghp-import>=2.1.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "jupyter-book>=1.0.4.post1",
    "jupyterlab>=4.4.4",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
]
